removed some useless parts. works! but need to optimize, remove useless code, add more math. textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 project(dummyRayCasting)
-
 set(CMAKE_CXX_STANDARD 11)
 
 find_package(SDL2 REQUIRED SDL2)
 
-add_executable(dummyRayCasting src/main.cpp src/DummyVector.cpp src/DummyVector.h src/GameObject.cpp src/GameObject.h src/GameMap.cpp src/GameMap.h src/DummyTrooper.cpp src/DummyTrooper.h src/RcRenderer.cpp src/RcRenderer.h)
+add_executable(dummyRayCasting src/main.cpp src/GameMap.cpp src/GameMap.h src/DummyTrooper.cpp src/DummyTrooper.h src/RcRenderer.cpp src/RcRenderer.h src/SolidObject.h src/SolidObject.cpp src/VisibleWall.h src/VisibleWall.cpp)
 
 target_link_libraries(dummyRayCasting PRIVATE SDL2 SDL2_image)
